# autoplex

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: jinja_template_utils.py  main.py  sample.env
app/config/: config.py
app/db/: database.py  models.py
app/plex/: api.py
app/routers/: auth.py
app/static/: bootstrap.css
app/templates/: base.j2  duplicates.j2  preferences.j2  sync.j2
config/: op.env
helpers/: celery.service
scripts/: deploy.sh
